# Hyperion-server

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  azure-pipelines.yml  build.sh  runtests.sh
doc/: build.md  networking.md  run_test.md  running.md
include/: hyperion.h
include/core/: convert.h  crash_handler.h  data_type.h  execution_timer.h  filesystem.h  guarded_data.h  hashers.h  logger.h  resource_guard.h  utility.h
include/media/: media_config.h  media_prop.h  save.h
include/net/: comm_format.h  communication.h  connection.h  greeting.h  logger.h  net_data.h  net_logger.h  net_prop.h  read.h  send.h  timed_action.h  type_alias.h
include/net/service/: connection_acceptor.h  connection_gc.h  connection_listener.h  connection_writer.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  hyperion.cpp
src/core/: crash_handler.cpp  execution_timer.cpp  filesystem.cpp  logger.cpp  utility.cpp
src/media/: save.cpp
src/net/: communication.cpp  connection.cpp  greeting.cpp  read.cpp  send.cpp
src/net/service/: connection_acceptor.cpp  connection_gc.cpp  connection_listener.cpp  connection_writer.cpp
test/: CMakeLists.txt  hyperionTests.cpp
test/core/: convertTests.cpp  file_systemTests.cpp  guarded_dataTests.cpp  resource_guardTests.cpp  utilityTests.cpp
test/media/: saveTests.cpp
test/net/: communicationTests.cpp  connectionTests.cpp  greetingTests.cpp
